--- a/slides/app/app.component.html
+++ b/slides/app/app.component.html
@@ -1,11 +1,1 @@
-<slides loop="true" pageIndicators="true">
-    <slide class="slide-1">
-        <Label text="Slide 1" textWrap="true"></Label>
-    </slide>
-    <slide class="slide-2">
-        <Label text="Slide 2" textWrap="true"></Label>
-    </slide>
-    <slide class="slide-3">
-        <Label text="Slide 3" textWrap="true"></Label>
-    </slide>
-</slides>
+<page-router-outlet></page-router-outlet>
